# rsu-tax

./: .gitignore  AGENTS.md  PLAN-data-import-ux.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: deploy.yml  pr.yml
fts-viz/: .gitignore  FINDINGS.md  corpus.go  db.go  go.mod  go.sum  main.go  views.go
fts-viz/tapes/: 01-simple-plain.tape  02-simple-fancy.tape  03-moderate-plain.tape  04-moderate-fancy.tape  05-insightful-plain.tape  06-insightful-fancy.tape  07-interactive-demo.tape
src/: App.tsx  types.ts
src/components/: CsvImport.tsx  ExportButtons.tsx  Summary.tsx  TransactionTable.tsx  VerificationPanel.tsx
src/lib/: calculator.ts  csv-parser.ts  db.ts  exchange-rates.ts  export-csv.ts  export-pdf.ts  sql.js.d.ts  verification.ts
src/lib/__tests__/: calculator.test.ts  csv-parser.test.ts  exchange-rates.test.ts  export-csv.test.ts  verification.test.ts
src/rsu_tax/: __init__.py  __main__.py  anonymize.py  app.py  calculator.py  csv_parser.py  enrichment.py  exchange_rates.py  export.py  lapse_parser.py  models.py  tax_form_parser.py  verification.py
src/rsu_tax/templates/: base.html  index.html
src/rsu_tax/templates/partials/: error.html  results.html
test-data/: gainloss-anonymized.csv  lapses-anonymized.csv  sample-schwab-realized-gains.csv
tests/: test_anonymize.py  test_calculator.py  test_csv_parser.py  test_enrichment.py  test_exchange_rates.py  test_export.py  test_lapse_parser.py  test_tax_form_parser.py  test_verification.py
